--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -4,3 +4,17 @@
 @import "~bootstrap/scss/mixins";
 
 @import "~bootstrap";
+
+.Login-body-center {
+  height: 100%;
+  text-align: center;
+}
+
+.Login-body-style {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url('https://i.imgur.com/bXfHBA4.jpg');
+  background-position: 50%;
+  background-size: cover;
+}
